Add logo to site configuration
Add logo field to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "Julio Barros"
 description: "Physicist — data science, material science, modeling, and visualization"
 theme: jekyll-theme-minimal
+logo: /profile.jpeg
 
 # Social links (optional for header)
 github: https://github.com/juliobarros-BR
