--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,14 @@ linkedin: https://www.linkedin.com/in/julio-o-amando-de-barros-a80861129/
 google_scholar: https://scholar.google.com/citations?user=0siqWoIAAAAJ&hl=en&oi=ao
 
 # === Build settings ===
-
+#include:
+#  - assets
+#markdown: kramdown
 
 # === Optional extras ===
-show_downloads: false      # hides the ZIP/TAR buttons
-google_analytics: ""       # you can add your tracking ID later (optional)
-plugins:
-  - jekyll-seo-tag         # adds better search engine tags automatically
+#show_downloads: false      # hides the ZIP/TAR buttons
+#google_analytics: ""       # you can add your tracking ID later (optional)
+#plugins:
+#  - jekyll-seo-tag         # adds better search engine tags automatically
 
 
