--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # === Basic site info ===
-title: "Julio Barrosssss"
+title: "Julio Barros"
 description: "Physicist — data science, material science, modeling, and visualization"
 theme: jekyll-theme-minimal
 logo: /profile.jpeg
