--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Julio Barros"
+title: "Júlio O. Amando de Barros"
 description: "Physicist — data science, material science, modeling, and visualization"
 theme: jekyll-theme-minimal
 logo: /profile.jpeg
