--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Júlio O. Amando de Barros"
-description: "Physicist — data science, material science, modeling, automation and data visualization"
+description: "Physicist — data science, material science, modeling, automation, and data visualization"
 theme: jekyll-theme-minimal
 logo: /profile.jpeg
 
