--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Júlio O. Amando de Barros"
+title: "Júlio Amando de Barros"
 description: "Physicist — data science, material science, modeling, automation, and data visualization"
 theme: jekyll-theme-minimal
 logo: /profile.jpeg
